修复关于使用base64崩溃的bug